build: md 수정 & markdown 수정

--- a/_posts/2024-05-27-markdown.md
+++ b/_posts/2024-05-27-markdown.md
@@ -1,144 +1,102 @@
 ---
 layout: post
 title: "Markdown 문법"
-categories: [kubernetes]
-permalink: /kubernetes/markdown
+categories: [ETC, markdown]
 ---
-
-https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one
-
-
 
 <!-- 제목 -->
+## 제목
 
 # 제목 1
-
+"# 제목 1"
 ## 제목 2
-
+" ## 제목 2"
 ### 제목 3
-
+" ### 제목 3"
 #### 제목 4
-
+" #### 제목 4"
 ##### 제목 5
-
+" ###### 제목 5"
 ###### 제목 6
+" ####### 제목 6"
 
+"#의 개수로 제목을 표현할 수 있다. 6개까지 글머리를 제공한다"
 
+## 줄바꿈
+' ' 스페이바 3개로 줄바꿈 가능하다   
 
+## 수평선
 <!-- 수평선 -->
-
-***
-
 ---
 
-___
+수평선은 아래처럼 기호 *, -, _ 3 개로 입력할 수 있다.
 
+예시) ***, ---, ___
 
-
-<!-- 텍스트 출력 -->
-
-그냥 쓰거나
-
-<p> 이렇게 쓰거나 </p>
-
-
-
+<!-- 텍스트 출력 
+텍스트 출력은 그냥 타이핑 하면 됨
+-->
 
 
 <!-- 텍스트 강조 -->
+## 텍스트 강조
+아래와 같이 기호로 텍스트에 효과를 적용시킬 수 있다.
 
+*기울임체* -> * 기울임체 * 
 
+_기울임체_ -> _ 기울임체 _ 
 
-*single asterisks* - 기울임체  \
+**볼드체** -> ** 굵은글씨체 **
 
-_single underscores_ - 기울임체 \
+__볼드와 기울임체__ -> __ 기울임체/굵은글씨체 __ 
 
-**double asterisks** - 굵은글씨체 \
+***triple underscores*** - *** 기울임체/굵은글씨체 ***
 
-__double underscores__ - 기울임체/굵은글씨체 \
+~~cancelline~~ - ~~ 취소줄 ~~ \
 
-***triple underscores*** - 기울임체/굵은글씨체 \
-
-~~cancelline~~ - 취소줄 \
-
-
-
-
-
-
+### 특수문자 쓰기
+\\(특수문자)
 
 <!-- 인용 -->
-
+## 인용하기
+인용은 > 이나 tap(=스페이스 4개)을 통해서 사용할 수 있다.
 
 
 > 인용하기
-
 >> 인용되는 구간에서 다시 인용하기
 
-
-
-> 인용인용 \
-
-> ㅇㅇ
-
-
-
-    탭 인용
-
-    ㅇㅇ
-
-    ㅋㅋㅋ
-
-
+    인용하기
+4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속됨.
 
 <!-- 목록 -->
-
-순차가 없는 리스트를 표현할 때는 ‘*‘, ‘+’, ‘-” 기호 사용 가능.
+## 리스트 사용법
+순차가 없는 리스트를 표현할 때는 *, +, - 기호 사용 가능.
 
 순차가 있는 리스트를 표현할 때 ‘숫자’ 사용용
 
-
-
 * 리스트1
+    * 서브 리스트 1
 
-+ 리스트2
+사용 방법
 
-    * 서브 리스트1
+    *, +, -: 리스트 1 
+        *, +, -: 서브 리스트 1 
 
-    * 서브리스트 2
 
-- 리스트3
-
+- 리스트 2
     1. 순차 리스트1
-
     2. 순차 리스트2
-
-
-
-<!-- 공백 -->
-
-4개의 공백 또는 하나의 탭으로 들여쓰기를 만나면 변환되기 시작하여 들여쓰지 않은 행을 만날때까지 변환이 계속됨.
-
-
-
-공백 없이 바로 시작...
-
-
-
-    스페이스 4개로 시작
-
-    스페이스 4개로 시작
-
-
-
-공백 없이 바로 시작...
+    
+사용 방법
+    
+    *, +, -: 리스트 2
+        1. 순차 리스트 1  
+        2. 순차 리스트 2
 
 
 
 <!-- 코드블록 -->
-
-
-
+## 코드 블록
 ``` cpp (언어이름)
 
 int a =10
@@ -146,161 +104,132 @@ int a =10
 return 0;
 
 ```
-
-
-
 ```python
 
 test = {"hello":"world"}
 
 print(test)
 
-
-
 ```
 
-\| \
+사용 방법
 
-`\|`
+\``` 언어이름 \
+코드내용 \
+\```
 
+인라인 사용법 \`변수와 같이 표현법`
 
-
-
-
-js에서 변수 선언은 `var d, let d` 로 선언합니다.
-
-
-
-
+예시) js에서 변수 선언은 `var d, let d` 로 선언합니다.
 
 <!-- table -->
 
+## 테이블 표현
 
+| 이름   | 설명  | 나이 |
+| --- | --- | --- |
+| 김수현  | 친구  | 10 |
+| 한소희  | 엄마  | 60 |
+| 최민수  | 애인  | 29 |
+
+사용방법
+
+\|을 사용하여 테이블 형식으로 표현할 수 있다.
 
 | 이름   | 설명  | 나이 |
 
-| ----- | ---- | --- |
+| --- | --- | --- |
 
-| 김태완  | 아빠  | 40 |
+| 김수현  | 친구  | 10 |
 
-| 임선영  | 엄마  | 30 |
+| 한소희  | 엄마  | 60 |
 
-| 김민수  | 아들  | 2  |
-
-
+| 최민수  | 애인  | 29 |
 
 <!-- 테이블 정렬 -->
-
+### 테이블 정렬
 테이블 정렬: 헤더와 row 구분 자에 적용
-
-
 
 오른쪽 정렬
 
-
-
 —-:
-
-
 
 왼쪽 정렬
 
-
-
 :—-
-
-
 
 가운데 정렬
 
-
-
 :—-:
 
-
-
 <!-- 링크 -->
+## 링크
+   
+[git blog](https://seojunh1104.github.io)   
+기본 문법: \[git blog](https://seojung1104.github.io)   
 
-기본 문법: [링크걸 문구](http://주소)
 
-
-
-타이틀을 포함하는 링크 \
-
+타이틀을 포함하는 링크    
+[git blog](https://seojung1104.github.io "타이틀 문구")   
 기본 문법: [링크걸 문구](http://주소 “타이틀 문구”)
 
 
+### 참조링크
+주소를 id로 참조
 
-참조 링크\
+[구글][1]
 
-주소를 id로 참조\
+[1]: http://www.google.com
 
-[id] 형식으로 지정\
-
-    [구글][1] \
-
-    [1]: http://www.google.com
-
-
+사용방법   
+\[구글][1]   
+\[1]: http://www.google.comß
 
 
+### 주소만으로 링크 
 
-주소만으로 링크 \
-
-주소를 “<“와 “>“기호로 감싸서 사용\
-
-<http://taewan.kim>
-
-
-
-
+주소를 “<“와 “>“기호로 감싸서 사용   
+<http://seojung1104.github.io>   
+예시) \<http://seojung1104.github.io>
 
 <!-- 네임드 엥커 -->
 
-### 테이블 구성
+## 네임드 엥커
 
-  * [1장](#chapter-1)
+  * [줄바꿈](##줄바꿈)
+  * [수평선](##수평선)
+  * [텍스트 강조](#텍스트-강조)
 
-  * [2장](#chapter-2)
-
-  * [3장](#chapter-3)
-
-
-
-
-
-
+사용법
+\* \[링크 문구](\#제목)
 
 <!-- 이미지 -->
+## 이미지 첨부
+### 기본 이미지 
 
-기본 이미지 \
-
-문법: ![사진이름](사진경로 타이틀[옵션]) \
-
-
-
-ex: ![Minion](http://octodex.github.com/images/minion.png  "title")
+문법: ![사진이름](사진경로 타이틀[옵션])  
+ex: \!\[Minion](http://octodex.github.com/images/minion.png  "title")
+![Minion](http://octodex.github.com/images/minion.png  "title")
 
 
+### 주소 참조 이미지 
+문법:   
+\![링크문구][id]   
+\[id]: http://octodex.github.com/images/dojocat.jpg  "The Dojocat" 
 
 
-
-주소 참조 이미지 \
+츌력 결과   
 
 ![Alt text][10]
 
-    [10]: http://octodex.github.com/images/dojocat.jpg  "The Dojocat"
-
-
-
+[10]: http://octodex.github.com/images/dojocat.jpg "The Dojocat"
 
 
 <!-- 각주 -->
-
-
-
+## 각주
 최근 스칼라는 매우 인기가 높은 언어이다.[^ids]
 
+[^ids]: 각주입니다.
 
-
+문법:   
 \[^ids]: 스칼라는 마틴 오더시크가 개발한 함수형 언어이다.
