docs: git convention 내용

--- a/_posts/2024-05-27-markdown.md
+++ b/_posts/2024-05-27-markdown.md
@@ -1,7 +1,9 @@
 ---
-layout: post
 title: "Markdown 문법"
+author: junghoon
+
 categories: [ETC, markdown]
+tag: [markdown]
 ---
 
 <!-- 제목 -->
@@ -233,3 +235,7 @@ ex: \!\[Minion](http://octodex.github.com/images/minion.png  "title")
 
 문법:   
 \[^ids]: 스칼라는 마틴 오더시크가 개발한 함수형 언어이다.
+
+
+## Reference
+[1. 마크다운 사용법](http://taewan.kim/post/markdown/#chapter-1)
