--- a/_posts/front/web/2024-07-01-html-개요.md
+++ b/_posts/front/web/2024-07-01-html-개요.md
@@ -2,8 +2,8 @@
 title: web 개요 
 author: junghoon
 date: 2024-07-01 12:00:00 +0800
-categorized: [Front, etc]
-tags: [Front, web]
+categories: [Front, etc]
+tag: [Front, web]
 ---
 
 # 웹의 개요
